adding about bird field in the result.html file

--- a/templates/result.html
+++ b/templates/result.html
@@ -8,5 +8,7 @@
         <h2>Predictions</h2>
         <p>Bird Species : {{ predicted_bird }}</p>
         <p>Bird Category : {{ bird_category }}</p>
+        <p>About this bird : {{ about_bird }}</p>
+        <a href="">Go To HomePage</a>
     </body>
 </html>
