Added Test Images For heroku application

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,10 @@
                 <input type="file" name="file"><br><br>
                 <input type="submit" value="upload">
             </form>
+
+            
+            <h5><span style="color:white">Made With Love by :</span> Ayush Dhanai | Akhil Tiwari</h5>
+            <h5><span style="color:white">Slack Id ::</span> @Ayush Dhanai | @Akhil_Tiwari</h5>
         </div>
     </body>
 </html>
