--- a/templates/result.html
+++ b/templates/result.html
@@ -11,6 +11,9 @@
             <p><b>About this bird </b></p>  <p> {{ about_bird }} </p>
             <br><br>
             <button onclick="window.location.href=''">Homepage</button>
+            <h5><span style="color:white">Made With Love by :</span> Ayush Dhanai | Akhil Tiwari</h5>
+            <h5><span style="color:white">Slack Id ::</span> @Ayush Dhanai | @Akhil_Tiwari</h5>
         </div>
+
     </body>
 </html>
